# eth-signer

./: .gitignore  AUDIT_IGNORE  Cargo.toml
scripts/: dfx_test_ic_signing.sh
src/: ic_sign.rs  lib.rs
test_canister/: Cargo.toml  README.md  dfx.json  test_canister.did
test_canister/scripts/: build.sh
